# vtr_in_airsim

./: AirSim_Changes.md  AirSim_Stereo_Gimbal.md  README.md  settings.json  stereo.yaml
Plugins/AirSim/Binaries/Linux/: UE4Editor.modules
Plugins/AirSim/Source/AirLib/include/vehicles/multirotor/api/: MultirotorApiBase.hpp  MultirotorRpcLibClient.hpp
Plugins/AirSim/Source/AirLib/include/vehicles/multirotor/firmwares/arducopter/: ArduCopterApi.hpp
Plugins/AirSim/Source/AirLib/include/vehicles/multirotor/firmwares/mavlink/: MavLinkMultirotorApi.hpp
Plugins/AirSim/Source/AirLib/include/vehicles/multirotor/firmwares/simple_flight/: AirSimSimpleFlightBoard.hpp  SimpleFlightApi.hpp  SimpleFlightQuadXParams.hpp
Plugins/AirSim/Source/AirLib/include/vehicles/multirotor/firmwares/simple_flight/firmware/: Mixer.hpp  Params.hpp  VelocityController.hpp
Plugins/AirSim/Source/AirLib/src/vehicles/multirotor/api/: MultirotorApiBase.cpp  MultirotorRpcLibClient.cpp  MultirotorRpcLibServer.cpp
Plugins/AirSim/Source/Vehicles/Multirotor/: FlyingPawn.h
airsim_vtr_interface/: CMakeLists.txt  package.xml
airsim_vtr_interface/launch/: airsim_interface.launch
airsim_vtr_interface/scripts/: airsim_command_drone.py  airsim_gimbal_controller.py  airsim_interface.py  airsim_stereo_publisher.py
scripts/: airsim_command_drone.sh  airsim_interface.sh  launch_enviroment.sh
tmuxp/: airsim.yaml  vtr2_m600_airsim.yaml
