<?xml version="1.0"?>
<package format="2">
  <name>airsim_vtr_interface</name>
  <version>0.0.0</version>
  <description>The airsim_vtr_interface package</description>

  <maintainer email="omar.elmofty@mail.utoronto.ca">Omar Elmofty</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>geometry_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>asrl__messages</build_depend>
  <build_depend>dji_osdk_ros</build_depend>


  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>

  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>asrl__messages</exec_depend>
  <exec_depend>dji_osdk_ros</exec_depend>

  <export>

  </export>
</package>
